--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,25 @@
 body {
-  background-color: #FFFFFF;
+  background-color: #6b262d;
+}
+body .form-control:focus {
+  border: 1px solid red;
+  box-shadow: 0 0 10px rgba(255, 0, 0, 0.911);
+}
+body .form-select:focus {
+  border: 1px solid red;
+  box-shadow: 0 0 10px rgba(255, 0, 0, 0.911);
+}
+body .form-label {
+  color: #DC3545;
+  font-size: 20px;
+  font-weight: bold;
+}
+body .dropdown-item:hover {
+  background-color: #9c2e39;
+}
+
+.customBox {
+  border-radius: 20px;
+  transform: perspective(1px) translateZ(0);
+  transition: transform 0.5s;
 }/*# sourceMappingURL=style.css.map */
