--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -1,3 +1,23 @@
 body {
-    background-color: #FFFFFF;
+    background-color: #6b262d;
+
+    .form-control:focus {
+        border: 1px solid red;
+        box-shadow: 0 0 10px rgba(255, 0, 0, 0.911);
+    }
+
+    .form-select:focus {
+        border: 1px solid red;
+        box-shadow: 0 0 10px rgba(255, 0, 0, 0.911);
+    }
+
+    .form-label {
+        color: #DC3545;
+        font-size: 20px;
+        font-weight: bold;
+    }
+
+    .dropdown-item:hover {
+        background-color: #9c2e39;
+    }
 }
